k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: predictor-deployment
  labels:
    app: predictor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: predictor
  template:
    metadata:
      labels:
        app: predictor
    spec:
      containers:
      - name: predictor
        image: zhukovmsu/otus-hw:c1231b7a97d33b0b226ae8481a22f6d1f461f202
        ports:
        - containerPort: 8890
