k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: predictor-service
  labels:
    app: predictor
spec:
  selector:
    # app.kubernetes.io/name: predictor
    app: predictor
  ports:
    - name: predictor
      protocol: TCP
      port: 8890
